Update components, add new pages,
Remove PostReviewModal component and place its logic into a new page called post-submission.tsx

Add next-auth.config.js and signin.tsx so next-auth can generate pages for authentication

Add conditional rendering based on route to navbar

Add discord as provider for next-auth
currently hitting sign in button throws a 404 error.

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://amin:digimond@localhost:5432/test"
+
+DISCORD_CLIENT_ID=1111382408135180328
+DISCORD_CLIENT_SECRET=v7PBKfLO334kRGN4Zjc2YXhARaiVYQ7u
+NEXTAUTH_URL= http://localhost:3000/
