--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
